Fix card gap.

--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,7 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    gap: 2rem;
   }
 }
 
